# UROP

./: .gitignore  check_env.sh
py-git-vars-demo/: README.md  app.py  data.json  viz.py
py-git-vars-demo/mypkg/: __init__.py  __main__.py  core.py
sanic-sortlist/: pyproject.toml
sanic-sortlist/app/: api.py  main.py
sanic_sortlist/: .dockerignore  README.md  data.json  docker-compose.dev.yml  dockerfile  main.py  pyproject.toml
