[project]
name = "urop"
version = "0.1.0"
description = ""
authors = [
    {name = "ro9er117911",email = "rogerlo117911@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sanic (>=25.3.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
